tests/negative/test_decl_cn_not_init.orb
fnc main() () {
    sym x:(i32 cn);
};